<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inventory App</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="user_name_str">User Name</string>
    <string name="password_str">Password</string>
    <string name="button_str">Login</string>
    <string name="title_activity_display_message">You should not see this</string>
    <string name="title_activity_http_example">HttpExampleActivity</string>
    <string name="title_activity_menu">Main Menu</string>
    <string name="button1">Search</string>
    <string name="button2">Move Item</string>
    <string name="button3">Modify Info</string>
    <string name="button4">Select Location</string>
    <string name="button5">Logout</string>
    <string name="button6">Pickup</string>
    <string name="button7">Delivery</string>
    <string name="button8">Verification </string>
    <string name="menu_msg">Select an option</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="SearchActivity_MSG">Scan/enter a Senate Tag# or Serial#</string>
    <string name="barcode_number">Senate Tag#</string>
    <string name="scan_button">Scan </string>
    <string name="ok_button"><![CDATA[<b>OK</b>]]></string>
    <string name="cancel_button"><![CDATA[<b>Cancel</b>]]></string>
    <string name="details">Details </string>
    <string name="title_activity_close">CloseActivity</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="add_item_activity">Scan the Location Senate Tag# or enter Location Code</string>
    <string name="location_code">Location Code </string>
    <string name="title_activity_add_item_activity2">AddItemActivity2</string>
    <string name="title_activity_mov_pick1">MovPick1</string>
    <string name="title_activity_movp1">Movp1</string>
    <string name="title_activity_move_pickup1">Move_pickup1</string>
    <string name="title_activity_move">Move Menu</string>
    <string name="title_activity_pickup1">Pickup</string>
    <string name="pickup1_header_text">Scan or enter Origin and Destination Location Codes</string>
    <string name="select_origin_loc">Enter Origin Location Code</string>
    <string name="select_dest_loc">Enter Destination Location Code</string>
    <string name="select_dest_hint">Destination Location Code</string>
    <string name="title_activity_pickup2">Pickup</string>
    <string name="title_activity_verification">Verification</string>
    <string name="verify_msg1">Select/enter location for Verification:</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="title_activity_verification2">Verification</string>
    <string name="verify_msg2">Scan items for Verification</string>
    <string name="verify2_list">List of scanned items </string>
    <string name="title_activity_veri_list">VeriListActivity</string>
    <string name="title_activity_verscan">Verification</string>
    <string name="count">Count</string>
    <string name="image">Thumbnail</string>
    <string name="title_activity_ver_summary">Verification</string>
    <string name="preferences_title">Your Preferences</string>
    <string name="ver_summary_title">Scanned Summary Confirmation</string>
    <string name ="title_activity_editpickup1">Edit Pickup</string>
    <string name ="title_edit_pickup">Pickup</string>

    <string-array name="verify_sort">
        <item>Description</item>
        <item>Senate Tag#</item>
    </string-array>

    <string-array name="editpickup_searchby">
        <item>Pickup Location</item>
        <item>Delivery Location</item>
        <item>Picked Up By</item>
        <item>Date</item>
   </string-array>
    <string-array name="search_searchby">
        <item>By Senate Tag#</item>
        <item>By Serial#</item>
   </string-array>
   
   <string-array name="remote_ship_types">
        <item>UPS</item>
        <item>FedEx</item>
        <item>Maintenance</item>
        <item>Other</item>
   </string-array>

   <string-array name="remote_ver_method">
        <item>Paperwork</item>
        <item>OSR Verified</item>
        <item>Phone Verified</item>
   </string-array>

    <string-array name="removal_reasons">
        <item>Damaged</item>
        <item>Returned</item>
        <item>Other</item>
    </string-array>
    
    <string name="pickup2Msg">Scan items for moving</string>
    <string name="pickup2Msg2">Origin and Destination</string>
    <string name="title_activity_pickup3">Pickup</string>
    <string name="title_activity_delivery1">Delivery</string>
    <string name="delivery1_msg">Select Pickup for Delivery To:</string>
    <string name="delivery1_hint">Scan or enter Location Code</string>
    <string name="title_activity_delivery2">Delivery</string>
    <string name="title_activity_delivery3">Delivery</string>
    <string name="delivery3_msg">Delivery Confirmation</string>
    <string name="pickup_emp_list_hint">Name of Employee Releasing Inventory</string>
    <string name="delivery_emp_list_hint">Name of Employee Accepting Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_update_app">UpdateAppActivity</string>
    <string name="title_activity_upgrade">Inventory App Update</string>
    <string name="title_activity_main">MainActivity</string>
	<string name="pickup3_title">Pickup Summary Confirmation/Release</string>
	<string name="enter_comments_box">Enter Comments</string>
	<string name="enter_osr_ref_num">OSR Reference #</string>
	<string name="enter_remote_employee">Enter Remote Employee Signer</string>
	<string name="status">Status:</string>
	<string name="remote_prompt_title">Enter Remote Verification Information</string>
	<string name="menu_about_title">About...</string>
	<string name="old_password_str">Old Password</string>	
	<string name="new_password_str">New Password</string>	
	<string name="confirm_password_str">Confirm Password</string>	
    <string name="enter_remote_title">Enter Remote</string>
    <string name="menu_change_password_title">Change Password</string>
    <string name="edit_remote_title">Add/Change Remote Info</string>
    <string name="inventory_removal">Inventory Removal</string>
</resources>
