<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="400dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/remote_prompt_title"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/remote_status_title"
        android:layout_below="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:text="@string/status"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/remote_method"
        style="@style/NormalText"
        android:layout_toRightOf="@+id/remote_status_title"
        android:layout_below="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center" />

    <gov.nysenate.inventory.android.ClearableAutoCompleteTextView
        android:id="@+id/remote_employee_signer"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remote_status_title"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:hint="@string/enter_remote_employee" />

        <gov.nysenate.inventory.android.ClearableEditText
        android:id="@+id/remote_comments"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remote_employee_signer"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_comments_box"
        android:inputType="textMultiLine" />
 
        <gov.nysenate.inventory.android.ClearableEditText
        android:id="@+id/remote_helprefnum"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remote_comments"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_osr_ref_num"
        android:inputType="textMultiLine" />
        

</RelativeLayout>
