<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    tools:context=".SearchActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/SearchActivity_MSG"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/barcode_number"
        android:inputType="number"
        android:padding="4dip" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/barcode"
        android:layout_marginTop="15dp"
        android:lines="10"
        android:padding="4dip"
        android:paddingTop="30dp"
        android:text="@string/details"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="78dp"
        android:layout_marginTop="30dp"
        android:onClick="okButton"
        android:padding="4dip"
        android:paddingTop="20dp"
        android:text="@string/ok_button" />
</RelativeLayout>