<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="27dp"
        android:layout_marginLeft="45dp"
        android:ems="10"
        android:hint="@string/user_name_str" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/user_name"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/password_str"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/user_name"
        android:layout_centerVertical="true"
        android:layout_marginRight="41dp"
        android:onClick="validate"
        android:text="@string/button_str" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="23dp"
        android:layout_marginRight="21dp"
        android:src="@drawable/nysenatelogo" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>