<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    tools:context=".Pickup1" >

    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:text="@string/select_origin_loc" />

    <gov.nysenate.inventory.android.ClearableAutoCompleteTextView
        android:id="@+id/autoCompleteTextView1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="140dp"
        android:ems="10"
        android:hint="@string/select_origin_loc" >

        <requestFocus />

    </gov.nysenate.inventory.android.ClearableAutoCompleteTextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignLeft="@+id/autoCompleteTextView1"
        android:layout_alignRight="@+id/autoCompleteTextView1"
        android:layout_below="@+id/autoCompleteTextView1"
        android:layout_marginTop="21dp"
        android:hint="@string/details"
        android:text="@string/details" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignLeft="@+id/autoCompleteTextView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/autoCompleteTextView2"
        android:layout_marginTop="44dp"
        android:hint="@string/details"
        android:text="@string/details" />

    <gov.nysenate.inventory.android.ClearableAutoCompleteTextView
        android:id="@+id/autoCompleteTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/select_dest_loc" >
    </gov.nysenate.inventory.android.ClearableAutoCompleteTextView>

    <ImageButton
        android:id="@+id/buttonPickup1Continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:onClick="continueButton"
        android:src="@drawable/bcontinue" />

    <ImageButton
        android:id="@+id/buttonPickup1Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:onClick="cancelButton"
        android:src="@drawable/bcancel" />

</RelativeLayout>
