<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListtestActivity" >



    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/preferencePWD"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/preferencePWD"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:hint="@string/count" >
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/verify_msg2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <gov.nysenate.inventory.andriod.ClearableEditText
        android:id="@+id/preferencePWD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/barcode_number"
        android:inputType="number"
        android:maxWidth="10dp"
        android:textSize="25sp"
        android:textStyle="bold" >

        <requestFocus />
    </gov.nysenate.inventory.andriod.ClearableEditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/sortList"
        android:gravity="center"
        android:text="Sort By"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/sortList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/textView2"
        android:entries="@array/verify_sort"
        android:gravity="center" />

    <ListView
        android:id="@+id/preferenceList"
        android:layout_width="wrap_content"
        android:layout_height="670dp"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/buttonVerListContinue"
        android:layout_below="@+id/preferencePWD" >
    </ListView>

    <ImageButton
        android:id="@+id/buttonVerListContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:onClick="okButton"
        android:src="@drawable/bcontinue" />

    <ImageButton
        android:id="@+id/buttonVerListCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:onClick="cancelButton"
        android:src="@drawable/bcancel" />
    
</RelativeLayout>